Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-105217

[REG: 6.3.2->6.4.0] Picking of 3D geometry works incorrectly (with BBox only)

XMLWordPrintable

    • Windows
    • bf802b3631 (qt/qtquick3d/dev) acecca3719 (qt/qtquick3d/6.4) acecca3719 (qt/tqtc-qtquick3d/6.4) bf802b3631 (qt/tqtc-qtquick3d/dev) acecca3719 (qt/qtquick3d/6.4.1) acecca3719 (qt/tqtc-qtquick3d/6.4.1)

      The picking doesn't work correctly. I.e. it works only with a bound-box of a model and ignores its geometry. 

      This issue is very easy to reproduce directly in your "Qt Quick 3D - Picking example" without any changes, i.e. I didn't make any changes there and just run and make a screenshot (see below). Fix that, pls.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            stromme Christian
            vlad.moldovanov Vladimir Moldovanov
            Votes:
            2 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes