Fix regression in picking behavior

Global picking state was not set correctly which, which meant that the
bvh was not built. Since that actual pick call is performed based on
the local state of the model, picking against the bounding volume still
worked...

Fixes: QTBUG-105217
Change-Id: I051160e8b5613cec84407268f8d1a37fda0a0dd2
Reviewed-by: Jonas Karlsson <jonas.karlsson@qt.io>
(cherry picked from commit bf802b3631b8319ffb0434a55e0d094514d249b7)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>